Boiler plate code with nav bar implemented

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+
+.app-container {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	height: fit-content;
+}
