--- a/src/pages/Proxies.scss
+++ b/src/pages/Proxies.scss
@@ -1,6 +1,8 @@
-.home-page {
+.proxies-container {
 	align-items: stretch;
 	color: black;
 	display: flex;
 	flex-direction: column;
+	margin-top: 30px;
+	width: 100px;
 }
