Refactored into smaller components

--- a/src/pages/profile/ProfilePage.scss
+++ b/src/pages/profile/ProfilePage.scss
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: stretch;
+    width: 110%;
     column-gap: 100px;
 }
