Added reducers and started styling profile page

--- a/src/pages/profile/ProfilePage.scss
+++ b/src/pages/profile/ProfilePage.scss
@@ -1,7 +1,7 @@
 .profile-page {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    width: 110%;
-    column-gap: 100px;
+    column-gap: 35px;
+    margin-top: 20px;
+    width: 100%;
 }
