--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,12 @@ code {
 }
 
 .app-container {
-	align-items: center;
 	display: flex;
+	align-items: center;
 	flex-direction: column;
 	width: 800px;
 	height: 600px;
+	position: relative;
 }
 
 .header-container {
